# software-testing-2024

robot_examples/demo_browser_20240506/: asennus_HP_20241130.txt  asennus_Lenovo_20241206.md  log.html  playwright-log.txt  pyproject.toml  report.html  results.xml
robot_examples/demo_browser_20240506/tests/: test.robot
robot_examples/restful_booker_platform_testing_20240506/: .gitignore  pyproject.toml
robot_examples/restful_booker_platform_testing_20240506/phase_1_20240506/: log.html  output.xml  report.html  robot_run.bat
robot_examples/restful_booker_platform_testing_20240506/phase_1_20240506/results/: log.html  output.xml  playwright-log.txt  report.html
robot_examples/restful_booker_platform_testing_20240506/phase_1_20240506/tests/: test.robot
robot_examples/restful_booker_platform_testing_20240506/phase_2_20240507/: robot_arguments.txt
robot_examples/restful_booker_platform_testing_20240506/phase_2_20240507/results/: log.html  output.xml  playwright-log-1733688259390027200.txt  playwright-log.txt  report.html
robot_examples/restful_booker_platform_testing_20240506/phase_2_20240507/tests/: test.robot
robot_examples/restful_booker_platform_testing_20240506/phase_3_20240507/results/: log.html  output.xml  playwright-log.txt  report.html
robot_examples/restful_booker_platform_testing_20240506/phase_3_20240507/tests/: test.robot
robot_examples/restful_booker_platform_testing_20240506/phase_6_20240513/: robot_run.bat
robot_examples/restful_booker_platform_testing_20240506/results/: log.html  output.xml  playwright-log.txt  report.html
(+33 files in other folders)
